<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CapsOffedToolbarItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/profile_action_bar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Профиль" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputLayout"

        style="@style/TextInputLayout"

        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbAction"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_hint"
            android:textColor="#101010"
            android:text="@string/profile_login"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"

        style="@style/TextInputLayout"

        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_name_hint"
            android:textColor="#101010"
            android:text="@string/profile_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        style="@style/TextButton"
        android:text="@string/button_change_password"
        android:textAlignment="viewStart"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#B00020"
        android:text="@string/button_exit"
        android:textAllCaps="false"
/>


</androidx.constraintlayout.widget.ConstraintLayout>