<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:navigationIcon="@drawable/ic_arrowback"
        />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#4B09F3"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tbAction"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/tvMetric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:textColor="#101010"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintBottom_toTopOf="@id/tvDate"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#808080"
        android:textSize="16sp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMetric"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="#101010"
        android:textStyle="bold"
        android:textSize="24sp"

        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintBottom_toTopOf="@id/tvStartTimeHeader"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvStartTimeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_activity_card_start_time_header"
        android:textColor="#101010"

        android:layout_marginTop="4dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvStartTimeValue"
        app:layout_constraintHorizontal_chainStyle="packed"
        />


    <TextView
        android:id="@+id/tvStartTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="#808080"

        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/tvStartTimeHeader"
        app:layout_constraintEnd_toStartOf="@id/tvVerticalLine"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tvVerticalLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_vertical_line_separator"
        android:textColor="#808080"


        app:layout_constraintStart_toEndOf="@id/tvStartTimeValue"
        app:layout_constraintEnd_toStartOf="@id/tvEndTimeHeader"
        app:layout_constraintTop_toBottomOf="@id/tvTime"

        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tvEndTimeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_activity_card_finish_time_header"
        android:textColor="#101010"

        android:layout_marginTop="4dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        app:layout_constraintStart_toEndOf="@id/tvStartTimeValue"
        app:layout_constraintEnd_toStartOf="@id/tvFinishTimeValue"
        app:layout_constraintHorizontal_chainStyle="packed"
        />


    <TextView
        android:id="@+id/tvFinishTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/tvEndTimeHeader"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

   <TextView
       android:id="@+id/tvComment"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/user_comment_shape"
       android:layout_marginTop="24dp"
       android:layout_marginHorizontal="32dp"
       android:textSize="16sp"
       android:paddingVertical="11dp"
       android:paddingHorizontal="16dp"
       app:layout_constraintTop_toBottomOf="@id/tvStartTimeHeader"


       />




</androidx.constraintlayout.widget.ConstraintLayout>